add environment variable and big refactor code